# bifrost-ui

./: README.md  app.py  pyproject.toml
templates/: dashboard.html  login.html
tests/: test_ui_auth_preview.py
