[project]
name = "bifrost-gateway-ui"
version = "0.1.0"
description = "Bifrost Gateway UI service"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "httpx>=0.24.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
